2.jan.2011 (lv)
      - fix #8474MusicXML import: Audiveris ".0" not handled in alter and in backup and forward duration
30.dec (lv)
      - fix #8428: musicxml import: voices mixed up
      - fix #4858: Courtesy accidentals do not import/export in MusicXML anymore
      - fix #8400: musicxml export: stem on whole note in triplet
29.dec (lv)
      - feature request #8355: bww import: fixed bww2mxml triplet beam
28.dec (lv)
      - feature request #8355: bww import: fixed export of metronome, triplet and stem
      - feature request #8355: bww import: fixed export of title, composer and rights
27.dec (lv)
      - feature request #8355: bww import: fixed voltas and triplets
      - feature request #8355: bww import: fixed clefs and multiple grace notes
      - feature request #8355: bww import: updated mscore regression testfiles
24.dec (lv)
      - feature request #8355: bww import: mscore regression test
      - feature request #8355: bww import: bww2mxml regression test
       (la)
      - fix #7764: crashes when open ove file (vanferry patch)
      - fix #8372: Fix to end-start-repeat bar line width (miwarre patch)
23.dec (lv)
      - feature request #8355: bww import: initial implementation
       (la)
      - fix #8369: Delete one instrument removes slurs from others
22.dec (lv)
      - feature request #8355: bww import: framework and bww to xml converter
       (la)
      - fix #8358: new score: create one measure more when pickup measure selected
      - fix #8347: tie in note entry does not work for voice > 1 after a barline (patch by fnbecker)
      - fix #8356: Configurable first page number (patch by Miwarre)
      - fix #8308: Creating triplet in grace note leads to time corruption
17.dec (la)
      - fix #6536: Position of stemslash in grace note chord
15.dec (la)
      - fix #7415: Stems too short for 32nd and 64th notes
      - fix #8273: Unecessary courtesy clef remains when clef is changed
13.dec (ws)
      - fix #8194 Edit instruments
8.dec (la)