@@ -1920,7 +1920,8 @@ void MusicXml::xmlAttributes(Measure* measure, int staff, QDomElement e)
                         }
                   }
             else if (e.tagName() == "key") {
-                  int number  = e.attribute(QString("number"), "-1").toInt();
+                  int number = e.attribute(QString("number"), "-1").toInt();
+                  QString printObject(e.attribute("print-object", "yes"));
                   int staffIdx = staff;
                   if (number != -1)
                         staffIdx += number - 1;
@@ -1941,21 +1942,19 @@ void MusicXml::xmlAttributes(Measure* measure, int staff, QDomElement e)
                         //       we see the "staves" tag
                         //
                         int staves = score->part(staff)->nstaves();
+                        // apply to all staves in part
                         for (int i = 0; i < staves; ++i) {
                               KeySigEvent oldkey = score->staff(staffIdx+i)->keymap()->key(tick);
                               if (oldkey != key) {
                                     // new key differs from key in effect at this tick
                                     (*score->staff(staffIdx+i)->keymap())[tick] = key;
-                                    // dont generate symbol for tick 0
-                                    if (tick) {
-                                          // apply to all staves in part
-                                          KeySig* keysig = new KeySig(score);
-                                          keysig->setTick(tick);
-                                          keysig->setTrack((staffIdx + i) * VOICES);
-                                          keysig->setSubtype(key);
-                                          Segment* s = measure->getSegment(keysig);
-                                          s->add(keysig);
-                                          }
+                                    KeySig* keysig = new KeySig(score);
+                                    keysig->setTick(tick);
+                                    keysig->setTrack((staffIdx + i) * VOICES);
+                                    keysig->setSubtype(key);
+                                    keysig->setVisible(printObject == "yes");
+                                    Segment* s = measure->getSegment(keysig);
+                                    s->add(keysig);
                                     }
                               }
                         }
@@ -1967,15 +1966,13 @@ void MusicXml::xmlAttributes(Measure* measure, int staff, QDomElement e)
                         if (oldkey != key) {
                               // new key differs from key in effect at this tick
                               (*score->staff(staffIdx)->keymap())[tick] = key;
-                              // dont generate symbol for tick 0
-                              if (tick) {
-                                    KeySig* keysig = new KeySig(score);
-                                    keysig->setTick(tick);
-                                    keysig->setTrack(staffIdx * VOICES);
-                                    keysig->setSubtype(key);
-                                    Segment* s = measure->getSegment(keysig);
-                                    s->add(keysig);
-                                    }
+                              KeySig* keysig = new KeySig(score);
+                              keysig->setTick(tick);
+                              keysig->setTrack(staffIdx * VOICES);
+                              keysig->setSubtype(key);
+                              keysig->setVisible(printObject == "yes");
+                              Segment* s = measure->getSegment(keysig);
+                              s->add(keysig);
                               }
                         }
                   }
@@ -2277,7 +2274,11 @@ void MusicXml::xmlNote(Measure* measure, int staff, QDomElement e)
       int headGroup = 0;
       bool noStem = false;
 
-      QString printObject(e.attribute("print-object", "yes"));
+      QString printObject = "yes";
+      if (pn.isElement() && pn.nodeName() == "note") {
+            QDomElement pne = pn.toElement();
+            printObject = pne.attribute("print-object", "yes");
+            }
 
       for (; !e.isNull(); e = e.nextSiblingElement()) {
             QString tag(e.tagName());
